--- a/CSC-405+Lab/Learning HTML/index.html
+++ b/CSC-405+Lab/Learning HTML/index.html
@@ -1,15 +1,11 @@
 <!DOCTYPE html>
-
-<html>
-    <head>
-        <title> Ka Booom </title>
-        </head>
-    <body>
-         <h1>I like pizza</h1>
-         <h2>I like pizza</h2>
-         <h3>I like pizza</h3>
-         <h4>I like pizza</h4>
-         <h5>I like pizza</h5>
-         <h6>I like pizza</h6>   
-    </body>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
+    
+</body>
 </html>
