--- a/CSC-405+Lab/Learning HTML/index.html
+++ b/CSC-405+Lab/Learning HTML/index.html
@@ -6,6 +6,21 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <h1>hello</h1>
+    <h2>hello</h2>
+    <h3>hello</h3>
+    <h4>hello</h4>
+    <h5>hello</h5>
+    <h6>hello</h6>
+    <p>This is some sample text in a paragraph</p>
+    <br>
+    <img src="https://www.w3schools.com/html/pic_trulli.jpg" alt="Trulli" width="500" height="600"> 
+    <br>
+    <a href="folder/page2.html">link</a>
+    <div>
+        <p>hello</p>
+        <p>hello</p>
+    </div>  
+
 </body>
 </html>
